# CPP_Project

./: .gitignore  README.md
cmake_template/: CMakeLists.txt
g2o_test/: CMakeLists.txt
g2o_test/src/: quadratic_func_example.cpp
glog_test/: CMakeLists.txt  README.md
glog_test/log/: Destination_example.ERROR  Destination_example.INFO  Destination_example.WARNING  error.log20231129-171608.26432  info.log20231129-171608.26432  warning.log20231129-171608.26432
glog_test/src/: Destination_example.cpp  log_example.cpp
googletest_test/: CMakeLists.txt  README.md
googletest_test/src/: EXPECT_DEATH_example.cpp  Parameter_example.cpp  TEST_F_example.cpp  TEST_example.cpp  example.cpp
matplotlib-cpp/: README.md
matplotlib_test/: CMakeLists.txt  contour_example.cpp  example.cpp  function_surface.cpp
numerical_optimization/: CMakeLists.txt  README.md  steepest_gd_test.cpp
numerical_optimization/src/: steepest_gd_test.cpp
ros1_topic_ws/: README.md
ros1_topic_ws/src/topic_test/: CMakeLists.txt  package.xml
ros1_topic_ws/src/topic_test/include/topic_test/: timer.h
ros1_topic_ws/src/topic_test/launch/: topic_test.launch
ros1_topic_ws/src/topic_test/src/: topic_pub.cpp  topic_sub.cpp
ros2_nav_ws/src/smooth_local_planner/: CMakeLists.txt  README.md  package.xml
ros2_nav_ws/src/smooth_local_planner/config/: planner.yaml  planner_params.yaml  rviz.rviz
ros2_nav_ws/src/smooth_local_planner/include/smooth_local_planner/: planner_config.hpp  smooth_local_planner_node.h  timer.hpp  visualizer.hpp
ros2_nav_ws/src/smooth_local_planner/launch/: smooth_local_planner.launch.py
ros2_nav_ws/src/smooth_local_planner/src/: smooth_local_planner_node.cpp
ros2_topic_ws/src/topic_test/: CMakeLists.txt  package.xml
ros2_topic_ws/src/topic_test/include/topic_test/: publisher_component.hpp  subscriber_component.hpp
ros2_topic_ws/src/topic_test/launch/: composition_demo.launch.py  topic_test.launch.py
ros2_topic_ws/src/topic_test/src/: publisher_component.cpp  subscriber_component.cpp  topic_publisher.cpp  topic_subscriber.cpp
tools/: README.md
tools/include/: data_monitor.h
